# byond

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: clippy-check.yml
c-ffi/: CMakeLists.txt  Cargo.toml  README.md  build.rs
c-ffi/src/: crc32.rs  lib.rs
cffi/: Cargo.toml  build.rs
cffi/src/: crc32.rs  lib.rs
lib/crc32/: Cargo.toml  README.md
lib/crc32/benches/: crc32.rs
lib/crc32/src/: baseline.rs  combine.rs  lib.rs  specialized.rs  tables.rs
lib/crc32/src/specialized/: pclmulqdq.rs
lib/rsc/: Cargo.toml  README.md
lib/rsc/src/: crypt.rs  decode.rs  encode.rs  error.rs  lib.rs
