[package]
name = "byond-crc32"
version = "3.0.0"
authors = ["Zac Stringham <zlstringham@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast CRC-32/BYOND checksum computation"
repository = "https://github.com/zlstringham/byond"
readme = "README.md"
keywords = ["byond", "checksum", "crc", "crc32"]
categories = ["algorithms", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = ["std"]
std = []

[[bench]]
name = "crc32"
harness = false
