[package]
name = "byond-rsc"
version = "0.1.0"
edition = "2021"
authors = ["Zac Stringham <zlstringham@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fast CRC-32/BYOND checksum computation"
repository = "https://github.com/zlstringham/byond"
readme = "README.md"
keywords = ["byond", "resource", "rsc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
thiserror = "1.0"
